--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+#support color
+set -g default-terminal "screen-256color"
+
 # setting the delay between prefix and command
 set -s escape-time 5
 
@@ -13,6 +16,11 @@ bind - split-window -v
 #set support
 set -g mouse on
 
+# default window with an activity alert# start with window 1 (instead of 0)
+set -g base-index 1
+
+# start with pane 1
+set -g pane-base-index 1
 
 #reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
@@ -30,7 +38,6 @@ set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 # default window title colors
 set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
 
-# default window with an activity alert
 set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
 
 # active window title colors
