--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,9 @@ set -s escape-time 5
 bind | split-window -h
 bind - split-window -v
 
+unbind '"'
+unbind %
+
 #set support
 set -g mouse on
 
@@ -27,6 +30,9 @@ bind r source-file ~/.tmux.conf
 
 # don't rename windows automatically
 set-option -g allow-rename off
+
+# open new windows in the current path
+bind c new-window -c "#{pane_current_path}"
 
 
 ## COLORSCHEME: gruvbox dark (medium)
