add helm to zsh, tmux change

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,7 +29,7 @@ set -g pane-base-index 1
 bind r source-file ~/.tmux.conf
 
 # don't rename windows automatically
-set-option -g allow-rename off
+set-option -g allow-rename on
 
 # open new windows in the current path
 bind c new-window -c "#{pane_current_path}"
