switch from meslo to hack font in alacritty

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -3,11 +3,11 @@ env:
 
 font:
   normal:
-    family: MesloLGS NF
+    family: Hack
   bold:
-    family: MesloLGS NF
+    family: Hack
   italic:
-    family: MesloLGS NF
+    family: Hack
 
 
   size: 10.0
