--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -12,8 +12,10 @@ font:
 
   size: 10.0
 
-background_opacity: 0.95
+window.opacity: 0.95
 
+  #window:
+  #  decorations: "none"
 # https://github.com/alacritty/alacritty/wiki/Color-schemes#gruvbox
 # Colors (Gruvbox dark)
 colors:
