tmux: split pane takes current path, vim plugin sorted

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,8 +10,8 @@ set -g default-terminal "screen-256color"
 set -s escape-time 5
 
 # splitting panes with | and -
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h "#{pane_current_path}"
+bind - split-window -v "#{pane_current_path}"
 
 unbind '"'
 unbind %
