--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -10,10 +10,11 @@ font:
     family: MesloLGS NF
 
 
-  size: 10.0
+  size: 13.0
 
-window.opacity: 0.95
-
+window:
+  opacity: 0.9
+  decorations: "none"
   #window:
   #  decorations: "none"
 # https://github.com/alacritty/alacritty/wiki/Color-schemes#gruvbox
