--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -49,6 +49,7 @@ colors:
   selection:
     text:       CellBackground
     background: CellForeground
+    save_to_clipboard: true
   bright:
     black:   '#928374'
     red:     '#fb4934'
