--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,9 +35,9 @@ set-option -g allow-rename off
 bind c new-window -c "#{pane_current_path}"
 
 
-## COLORSCHEME: gruvbox dark (medium)
 set-option -g status "on"
 
+#colorscheme: gruvbox dark
 # default statusbar color
 set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 
