vim bindings for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,8 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+#neckbeard mode
+setw -g mode-keys vi
 #support color
 set -g default-terminal "screen-256color"
 
