--- a/ntmux/.tmux.conf
+++ b/ntmux/.tmux.conf
@@ -32,6 +32,8 @@ bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 
+#caveman bindings
+
 
 #reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
@@ -44,6 +46,9 @@ set -g renumber-windows on
 
 # Use titles in tabs
 set -g set-titles on
+
+# Restoring clear screen binding, <prefix> C-l can clear screen now
+bind C-l send-keys 'C-l'
 
 ###################################### VIM #####################################
 
