--- a/ntmux/.tmux.conf
+++ b/ntmux/.tmux.conf
@@ -77,7 +77,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after compu
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'dracula/tmux' #official theme
 
-set -g status-right "#{pomodoro_status}"
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
@@ -87,6 +86,7 @@ set -g @dracula-plugins "git network-vpn kubernetes-context weather time"
 set -g @dracula-show-powerline true
 set -g @dracula-show-window-flags true
 set -g @dracula-show-fahrenheit false
+set -g @dracula-fixed-location "Hof,Bavaria"
 set -g @dracula-show-location false
 set -g @dracula-show-empty-plugins false
 
