--- a/ntmux/.tmux.conf
+++ b/ntmux/.tmux.conf
@@ -9,12 +9,13 @@ set -g default-terminal "screen-256color"
 set -s escape-time 5
 
 # splitting panes with | and -
+# and open splits in the same directory
 
 unbind %
-bind | split-window -h 
+bind | split-window -h -c "#{pane_current_path}"
 
 unbind '"'
-bind - split-window -v 
+bind - split-window -v -c "#{pane_current_path}"
 
 #mouse support
 set -g mouse on
