(fix(tpm plugin): remove weather widget

--- a/ntmux/.tmux.conf
+++ b/ntmux/.tmux.conf
@@ -82,7 +82,7 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
 # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time, spotify-tui, kubernetes-context
-set -g @dracula-plugins "git network-vpn kubernetes-context weather time"
+set -g @dracula-plugins "git network-vpn kubernetes-context time"
 
 set -g @dracula-show-powerline true
 set -g @dracula-show-window-flags true
