style(tmux): rename tmux with tpm plugins to something for relatable

--- a/tmux-tpm/.tmux.conf
+++ b/tmux-tpm/.tmux.conf
@@ -5,6 +5,7 @@ bind-key C-a send-prefix
 
 #support colors
 set -g default-terminal "screen-256color"
+
 # setting the delay between prefix and command
 set -s escape-time 5
 
@@ -76,6 +77,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator' #need to have this in nvim as well
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'dracula/tmux' #official theme
 
 set -g @resurrect-capture-pane-contents 'on'
