--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,22 +3,22 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-#neckbeard mode
-setw -g mode-keys vi
-#support color
+#support colors
 set -g default-terminal "screen-256color"
 
 # setting the delay between prefix and command
 set -s escape-time 5
 
 # splitting panes with | and -
-bind | split-window -h 
-bind - split-window -v 
+# and open splits in the same directory
+
+unbind %
+bind | split-window -h -c "#{pane_current_path}"
 
 unbind '"'
-unbind %
+bind - split-window -v -c "#{pane_current_path}"
 
-#set support
+#mouse support
 set -g mouse on
 
 # default window with an activity alert# start with window 1 (instead of 0)
@@ -27,62 +27,71 @@ set -g base-index 1
 # start with pane 1
 set -g pane-base-index 1
 
+# removing the -r option would only allow tapping once
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
+
+#caveman bindings
+
+
 #reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
-# don't rename windows automatically
-set-option -g allow-rename off
+# Automatically rename windows based on the application within
+setw -g automatic-rename on
+
+# Renumber windows if others are closed
+set -g renumber-windows on
+
+# Use titles in tabs
+set -g set-titles on
+
+# Restoring clear screen binding, <prefix> C-l can clear screen now
+bind C-l send-keys 'C-l'
+
+###################################### VIM #####################################
+
+# Tmux doesn't pass <S-CR> codes to Neovim
+# https://stackoverflow.com/questions/16359878/how-to-map-shift-enter
+bind -n S-Enter send-keys Escape "[13;2u"
+
+# Smart pane switching with awareness of Vim splits.
+# From https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind-key -n 'C-j' if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind-key -n 'C-k' if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind-key -n 'C-l' if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # open new windows in the current path
 bind c new-window -c "#{pane_current_path}"
 
+# tpm plugin
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set-option -g status "on"
+# list of tmux plugins
+set -g @plugin 'christoomey/vim-tmux-navigator' #need to have this in nvim as well
+set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @plugin 'dracula/tmux' #official theme
 
-#colorscheme: gruvbox dark
-# default statusbar color
-set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 
-# default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time, spotify-tui, kubernetes-context
+set -g @dracula-plugins "git network-vpn kubernetes-context time"
 
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+set -g @dracula-show-powerline true
+set -g @dracula-show-window-flags true
+set -g @dracula-show-fahrenheit false
+set -g @dracula-fixed-location "Hof,Bavaria"
+set -g @dracula-show-location false
+set -g @dracula-show-empty-plugins false
 
-# active window title colors
-set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
-
-# pane border
-set-option -g pane-active-border-style fg=colour250 #fg2
-set-option -g pane-border-style fg=colour237 #bg1
-
-# message infos
-set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
-
-# writing commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
-
-# pane number display
-set-option -g display-panes-active-colour colour250 #fg2
-set-option -g display-panes-colour colour237 #bg1
-
-# clock
-set-window-option -g clock-mode-colour colour109 #blue
-
-# bell
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
-
-## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-justify "left"
-set-option -g status-left-style none
-set-option -g status-left-length "80"
-set-option -g status-right-style none
-set-option -g status-right-length "80"
-set-window-option -g window-status-separator ""
-
-set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
-set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] "
-
-set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
-set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
-
-# vim: set ft=tmux tw=0 nowrap:
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
