--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,8 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 #support colors
+#set -g default-terminal "$TERM"
+#set -ag default-terminal "$TERM:Tc"
 set -g default-terminal "screen-256color"
 
 # setting the delay between prefix and command
@@ -23,9 +25,12 @@ set -g mouse on
 
 # default window with an activity alert# start with window 1 (instead of 0)
 set -g base-index 1
-
 # start with pane 1
 set -g pane-base-index 1
+# Automatically rename windows based on the application within
+setw -g automatic-rename on
+# Renumber windows if others are closed
+set -g renumber-windows on
 
 # removing the -r option would only allow tapping once
 bind -r j resize-pane -D 5
@@ -33,17 +38,8 @@ bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 
-#caveman bindings
-
-
 #reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
-
-# Automatically rename windows based on the application within
-setw -g automatic-rename on
-
-# Renumber windows if others are closed
-set -g renumber-windows on
 
 # Use titles in tabs
 set -g set-titles on
