--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,9 +15,9 @@ set -s escape-time 5
 # and open splits in the same directory
 
 unbind %
-bind | split-window -h -c "#{pane_current_path}"
-
 unbind '"'
+
+bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 #mouse support
@@ -47,8 +47,6 @@ set -g set-titles on
 # Restoring clear screen binding, <prefix> C-l can clear screen now
 bind C-l send-keys 'C-l'
 
-###################################### VIM #####################################
-
 # Tmux doesn't pass <S-CR> codes to Neovim
 # https://stackoverflow.com/questions/16359878/how-to-map-shift-enter
 bind -n S-Enter send-keys Escape "[13;2u"
@@ -62,6 +60,8 @@ bind-key -n 'C-j' if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind-key -n 'C-k' if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind-key -n 'C-l' if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
+#reminder to me: have the nvim plugin loaded as well
+
 # open new windows in the current path
 bind c new-window -c "#{pane_current_path}"
 
@@ -73,21 +73,26 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator' #need to have this in nvim as well
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
-set -g @plugin 'dracula/tmux' #official theme
+set -g @plugin 'b0o/tmux-autoreload' # autoreload tmux configuration
+set -g @plugin 'olimorris/tmux-pomodoro-plus' #
+set -g @plugin 'tmux-plugins/tmux-open' # open highlighted selection in tmux copy mode
+
+# pomodoro keybinds
+#    <tmux-prefix> p to toggle between starting/pausing a Pomodoro/break
+#    <tmux-prefix> P to cancel a Pomodoro/break
+#    <tmux-prefix> _ to skip a Pomodoro/break
+#    <tmux-prefix> C-p to open the Pomodoro timer menu
+#    <tmux-prefix> M-p to set a custom Pomodoro timer
+
 
 set -g @resurrect-capture-pane-contents 'on'
+# To be absolutely sure automatic restore doesn't happen, create a tmux_no_auto_restore file in your home directory 
+# command: $ touch ~/tmux_no_auto_restore). 
+# Automatic restore won't happen if this file exists.
 set -g @continuum-restore 'on'
+set -g @continuum-save-interval '30' # autosave 30 minutes
 
-# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time, spotify-tui, kubernetes-context
-set -g @dracula-plugins "git network-vpn kubernetes-context time"
-
-set -g @dracula-show-powerline true
-set -g @dracula-show-window-flags true
-set -g @dracula-show-fahrenheit false
-set -g @dracula-fixed-location "Hof,Bavaria"
-set -g @dracula-show-location false
-set -g @dracula-show-empty-plugins false
+set -g status-right 'Continuum status: #{continuum_status} #{pomodoro_status}'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
