--- a/tmux/.config/tmux/.tmux.conf
+++ b/tmux/.config/tmux/.tmux.conf
@@ -73,16 +73,17 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator' #need to have this in nvim as well
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-set -g @plugin 'b0o/tmux-autoreload' # autoreload tmux configuration
+set -g @plugin 'catppuccin/tmux' #colorscheme
 set -g @plugin 'olimorris/tmux-pomodoro-plus' #
 set -g @plugin 'tmux-plugins/tmux-open' # open highlighted selection in tmux copy mode
 
+
 # pomodoro keybinds
-#    <tmux-prefix> p to toggle between starting/pausing a Pomodoro/break
-#    <tmux-prefix> P to cancel a Pomodoro/break
-#    <tmux-prefix> _ to skip a Pomodoro/break
-#    <tmux-prefix> C-p to open the Pomodoro timer menu
-#    <tmux-prefix> M-p to set a custom Pomodoro timer
+# <tmux-prefix> p to toggle between starting/pausing a Pomodoro/break
+# <tmux-prefix> P to cancel a Pomodoro/break
+# <tmux-prefix> _ to skip a Pomodoro/break
+# <tmux-prefix> C-p to open the Pomodoro timer menu
+# <tmux-prefix> M-p to set a custom Pomodoro timer
 
 
 set -g @resurrect-capture-pane-contents 'on'
@@ -91,6 +92,10 @@ set -g @resurrect-capture-pane-contents 'on'
 # Automatic restore won't happen if this file exists.
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '30' # autosave 30 minutes
+
+set -g @catppuccin-flavour 'mocha'
+set -g @catppuccin_status_fill "icon"
+
 
 set -g status-right 'Continuum status: #{continuum_status} #{pomodoro_status}'
 
