housekeeping for current setup -alacritty font increase -cleanup zsh plugins -gitconfig revisited, no-reply email -mpv use large cache to get hdds' sleeping faster

--- a/gitconfig/.gitconfig
+++ b/gitconfig/.gitconfig
@@ -1,5 +1,6 @@
 [user]
-  name = Konstantin Sewina
+  name = ksewina
+  email = 17175236+ksewina@users.noreply.github.com
 [init]
 	defaultBranch = main
 [core]
