make config more concise, (was autoconverted with update switching from yaml to toml style config)

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,122 +1,78 @@
 live_config_reload = true
 
-[colors.bright]
-black = "#6272a4"
-blue = "#d6acff"
-cyan = "#a4ffff"
-green = "#69ff94"
-magenta = "#ff92df"
-red = "#ff6e6e"
-white = "#ffffff"
-yellow = "#ffffa5"
-
-[colors.cursor]
-cursor = "CellForeground"
-text = "CellBackground"
-
-[colors.footer_bar]
-background = "#282a36"
-foreground = "#f8f8f2"
-
-[colors.hints.end]
-background = "#282a36"
-foreground = "#f1fa8c"
-
-[colors.hints.start]
-background = "#f1fa8c"
-foreground = "#282a36"
-
-[colors.line_indicator]
-background = "None"
-foreground = "None"
-
-[colors.normal]
-black = "#21222c"
-blue = "#bd93f9"
-cyan = "#8be9fd"
-green = "#50fa7b"
-magenta = "#ff79c6"
-red = "#ff5555"
-white = "#f8f8f2"
-yellow = "#f1fa8c"
-
-[colors.primary]
-background = "#282a36"
-bright_foreground = "#ffffff"
-foreground = "#f8f8f2"
-
-[colors.search.focused_match]
-background = "#ffb86c"
-foreground = "#44475a"
-
-[colors.search.matches]
-background = "#50fa7b"
-foreground = "#44475a"
-
-[colors.selection]
-background = "#44475a"
-text = "CellForeground"
-
-[colors.vi_mode_cursor]
-cursor = "CellForeground"
-text = "CellBackground"
+[colors]
+  [colors.bright]
+    black = "#6272a4"
+    blue = "#d6acff"
+    cyan = "#a4ffff"
+    green = "#69ff94"
+    magenta = "#ff92df"
+    red = "#ff6e6e"
+    white = "#ffffff"
+    yellow = "#ffffa5"
+  [colors.cursor]
+    cursor = "CellForeground"
+    text = "CellBackground"
+  [colors.footer_bar]
+    background = "#282a36"
+    foreground = "#f8f8f2"
+  [colors.hints]
+    end = { background = "#282a36", foreground = "#f1fa8c" }
+    start = { background = "#f1fa8c", foreground = "#282a36" }
+  [colors.line_indicator]
+    background = "None"
+    foreground = "None"
+  [colors.normal]
+    black = "#21222c"
+    blue = "#bd93f9"
+    cyan = "#8be9fd"
+    green = "#50fa7b"
+    magenta = "#ff79c6"
+    red = "#ff5555"
+    white = "#f8f8f2"
+    yellow = "#f1fa8c"
+  [colors.primary]
+    background = "#282a36"
+    bright_foreground = "#ffffff"
+    foreground = "#f8f8f2"
+  [colors.search]
+    focused_match = { background = "#ffb86c", foreground = "#44475a" }
+    matches = { background = "#50fa7b", foreground = "#44475a" }
+  [colors.selection]
+    background = "#44475a"
+    text = "CellForeground"
+  [colors.vi_mode_cursor]
+    cursor = "CellForeground"
+    text = "CellBackground"
 
 [font]
-size = 15.0
+  size = 15.0
+  [font.bold]
+    family = "MesloLGS Nerd Font"
+  [font.italic]
+    family = "MesloLGS Nerd Font"
+  [font.normal]
+    family = "MesloLGS Nerd Font"
 
-[font.bold]
-family = "MesloLGS Nerd Font"
-
-[font.italic]
-family = "MesloLGS Nerd Font"
-
-[font.normal]
-family = "MesloLGS Nerd Font"
-
-[[keyboard.bindings]]
-action = "Paste"
-key = "V"
-mods = "Control|Shift"
-
-[[keyboard.bindings]]
-action = "Copy"
-key = "C"
-mods = "Control|Shift"
-
-[[keyboard.bindings]]
-action = "Quit"
-key = "Q"
-mods = "Command"
-
-[[keyboard.bindings]]
-action = "Quit"
-key = "W"
-mods = "Command"
-
-[[keyboard.bindings]]
-action = "PasteSelection"
-key = "Insert"
-mods = "Shift"
-
-[[keyboard.bindings]]
-action = "ResetFontSize"
-key = "Key0"
-mods = "Control"
-
-[[keyboard.bindings]]
-action = "IncreaseFontSize"
-key = "Equals"
-mods = "Control"
-
-[[keyboard.bindings]]
-action = "DecreaseFontSize"
-key = "Minus"
-mods = "Control"
+[keyboard]
+  bindings = [
+    { action = "Paste", key = "V", mods = "Control|Shift" },
+    { action = "Copy", key = "C", mods = "Control|Shift" },
+    { action = "Quit", key = "Q", mods = "Command" },
+    { action = "Quit", key = "W", mods = "Command" },
+    { action = "PasteSelection", key = "Insert", mods = "Shift" },
+    { action = "ResetFontSize", key = "Key0", mods = "Control" },
+    { action = "IncreaseFontSize", key = "Equals", mods = "Control" },
+    { action = "DecreaseFontSize", key = "Minus", mods = "Control" },
+    { key = "Right", mods = "Alt", chars = "\u001BF" },
+    { key = "Left", mods = "Alt", chars = "\u001BB" }
+  ]
 
 [scrolling]
-history = 10000
-multiplier = 10
+  history = 10000
+  multiplier = 10
 
 [window]
-decorations = "full"
-opacity = 0.95
+  decorations = "full"
+  opacity = 0.95
+
