--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -74,17 +74,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator' #need to have this in nvim as we
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'catppuccin/tmux' #colorscheme
-set -g @plugin 'olimorris/tmux-pomodoro-plus' #
 set -g @plugin 'tmux-plugins/tmux-open' # open highlighted selection in tmux copy mode
-
-
-# pomodoro keybinds
-# <tmux-prefix> p to toggle between starting/pausing a Pomodoro/break
-# <tmux-prefix> P to cancel a Pomodoro/break
-# <tmux-prefix> _ to skip a Pomodoro/break
-# <tmux-prefix> C-p to open the Pomodoro timer menu
-# <tmux-prefix> M-p to set a custom Pomodoro timer
-
 
 set -g @resurrect-capture-pane-contents 'on'
 # To be absolutely sure automatic restore doesn't happen, create a tmux_no_auto_restore file in your home directory 
@@ -96,8 +86,15 @@ set -g @continuum-save-interval '30' # autosave 30 minutes
 set -g @catppuccin-flavour 'mocha'
 set -g @catppuccin_status_fill "icon"
 
-
-set -g status-right 'Continuum status: #{continuum_status} #{pomodoro_status}'
+#make status line pretty
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
