--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-live_config_reload = true
 
 [colors]
   [colors.bright]
@@ -75,4 +74,8 @@ live_config_reload = true
 [window]
   decorations = "full"
   opacity = 0.95
+  option_as_alt = "Both"
+
+[general]
+live_config_reload = true
 
