--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,4 +1,17 @@
+[general]
+live_config_reload = true
 
+[scrolling]
+  history = 100000
+
+[window]
+  decorations = "full"
+  opacity = 0.95
+  option_as_alt = "Both"
+
+[selection]
+  semantic_escape_chars = ",│`|:\"' ()[]{}<>"
+  save_to_clipboard = true
 [colors]
   [colors.bright]
     black = "#6272a4"
@@ -66,16 +79,3 @@
     { key = "Right", mods = "Alt", chars = "\u001BF" },
     { key = "Left", mods = "Alt", chars = "\u001BB" }
   ]
-
-[scrolling]
-  history = 10000
-  multiplier = 10
-
-[window]
-  decorations = "full"
-  opacity = 0.95
-  option_as_alt = "Both"
-
-[general]
-live_config_reload = true
-
