--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,7 @@ bind-key C-a send-prefix
 #set -g default-terminal "$TERM"
 #set -ag default-terminal "$TERM:Tc"
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
 # setting the delay between prefix and command
 set -s escape-time 5
@@ -73,8 +74,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator' #need to have this in nvim as well
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-set -g @plugin 'catppuccin/tmux' #colorscheme
-set -g @plugin 'tmux-plugins/tmux-open' # open highlighted selection in tmux copy mode
+set -g @plugin 'sainnhe/tmux-fzf' # fuzy finding
+
 
 set -g @resurrect-capture-pane-contents 'on'
 # To be absolutely sure automatic restore doesn't happen, create a tmux_no_auto_restore file in your home directory 
@@ -83,18 +84,19 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '30' # autosave 30 minutes
 
-set -g @catppuccin-flavour 'mocha'
-set -g @catppuccin_status_fill "icon"
+# tmux fzf
+TMUX_FZF_LAUNCH_KEY="C-f"
 
-#make status line pretty
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
+set -g status-style bg=default,fg=#a8a8a8
+
+set -g status-left " #S #[fg=#666666]• "
+set -g status-left-length 30
+
+set -g window-status-format "#[fg=#666666] #I:#W "
+set -g window-status-current-format "#[fg=#ffffff] #I:#W "
+set -g window-status-separator ""
+
+set -g status-right '%H:%M | %d-%b '
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
