safer option for session seperator

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -89,7 +89,7 @@ TMUX_FZF_LAUNCH_KEY="C-f"
 
 set -g status-style bg=default,fg=#a8a8a8
 
-set -g status-left " #S #[fg=#666666]• "
+set -g status-left " #S #[fg=#666666] | "
 set -g status-left-length 30
 
 set -g window-status-format "#[fg=#666666] #I:#W "
