sensible additions and typo fix

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,10 @@ set -ga terminal-overrides ",*256col*:Tc"
 # setting the delay between prefix and command
 set -s escape-time 5
 
+# Emacs key bindings in tmux command prompt (prefix + :) are better than
+# vi keys, even for vim users
+set -g status-keys emacs
+
 # splitting panes with | and -
 # and open splits in the same directory
 
@@ -73,7 +77,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator' #need to have this in nvim as well
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 30 minutes
 set -g @plugin 'sainnhe/tmux-fzf' # fuzy finding
 
 
@@ -86,6 +90,10 @@ set -g @continuum-save-interval '30' # autosave 30 minutes
 
 # tmux fzf
 TMUX_FZF_LAUNCH_KEY="C-f"
+
+# tmux status bar
+
+set -g status-interval 5
 
 set -g status-style bg=default,fg=#a8a8a8
 
