--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -78,7 +78,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator' #need to have this in nvim as well
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 30 minutes
-set -g @plugin 'sainnhe/tmux-fzf' # fuzy finding
+set -g @plugin 'sainnhe/tmux-fzf' # fuzzy finding to control parts of tmux
+set -g @plugin 'laktak/extrakto' # fuzzy find text and paste without a mouse !
 
 
 set -g @resurrect-capture-pane-contents 'on'
@@ -90,6 +91,12 @@ set -g @continuum-save-interval '30' # autosave 30 minutes
 
 # tmux fzf
 TMUX_FZF_LAUNCH_KEY="C-f"
+
+# tmux extrakto
+# prefix + tab = start extrakto
+# fuzzy find stuff
+# TAB for inert in pane , ENTER for copy to clipboard
+
 
 # tmux status bar
 
@@ -104,7 +111,7 @@ set -g window-status-format "#[fg=#666666] #I:#W "
 set -g window-status-current-format "#[fg=#ffffff] #I:#W "
 set -g window-status-separator ""
 
-set -g status-right '%H:%M | %d-%b '
+set -g status-right '#{?window_zoomed_flag,Z,} [#{window_panes}] | %H:%M | %d-%b-%y '
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
