--- a/mpv/.config/mpv/config
+++ b/mpv/.config/mpv/config
@@ -1,61 +1,98 @@
-#The default profile sets some recommended settings
+# The default profile sets some recommended settings
 profile=gpu-hq
 
-#The called API
-#Use "opengl" if you have compatibility issues.For displaying HDR content (not HDR -> SDR) "d3d11" is recommended (Windows only). 
+# modern scale
+scale=ewa_lanczossharp
+dscale=mitchell
+cscale=ewa_lanczossharp
+
+# HDR tone mapping
+tone-mapping=hable
+hdr-compute-peak=yes
+
+# The called API
+# Use "opengl" if you have compatibility issues.For displaying HDR content (not HDR -> SDR) "d3d11" is recommended (Windows only). 
 gpu-api=auto
 # use vulkan (needs valid spirv-complier)
-#gpu-api=vulkan
+# gpu-api=vulkan
 
-#Hardware decoding for whatever your CPU/GPU supports (e.g. 8bit h264 / 10bit h265)
-#Only should be used when your CPU/GPU are very old, else avoid using it
-#Use "auto-copy-safe" for the safest result in trade of better performance
-#You can manually try "d3d11va" / "dxva2-copy" on Windows, "vaapi" / "vaapi-copy" on Linux or
-#"nvdec" / "nvdec-copy" with an Nvidia GPUs
-hwdec=auto-safe
-
-#Don't close the player after finishing the video
+# Don't close the player after finishing the video
 keep-open=yes
 
-#The last position of your video is saved when quitting mpv
+# The last position of your video is saved when quitting mpv
 save-position-on-quit=yes
 
-#Start mpv with a % smaller resolution of your screen
+# Start mpv with a % smaller resolution of your screen
 autofit-larger=80%x70%
 
-#Force seeking (if seeking doesn't work)
+# Force seeking (if seeking doesn't work)
 force-seekable=yes
 
 # cache for everything, even local files
 cache=yes
 
-#demuxer cache
-demuxer-max-bytes=500M
-demuxer-max-back-bytes=100M
+# demuxer cache
+demuxer-max-bytes=1000M
+demuxer-readahead-secs=20
 
-#priority
+audio-pitch-correction=yes
+volume-max=200
+# Note: loudnorm filter works on both but may need ffmpeg compiled with libebur128
 
-#Audio language priority
+osd-on-seek=msg-bar
+sub-auto=fuzzy
+sub-file-paths=sub:subtitles:subs
+
+# Audio language priority
 alang=en,eng,ja,jp,jpn,de,deu,ger
 
-#Subtitle language priority
+# Subtitle language priority
 slang=en,eng,de,deu,ger
 
 
-#Output format of screenshots
+# Output format of screenshots
 screenshot-format=png
 
-#Same output bitdepth as the video
-#Set it "no" if you want to save disc space
+# Same output bitdepth as the video
+# Set it "no" if you want to save disc space
 screenshot-high-bit-depth=yes
 
-#Compression of the PNG picture (1-9)
-#Higher value means better compression, but takes more time
+# Compression of the PNG picture (1-9)
+# Higher value means better compression, but takes more time
 screenshot-png-compression=1
 
-#Quality of JPG pictures (0-100)
-#Higher value means better quality
+# Quality of JPG pictures (0-100)
+# Higher value means better quality
 screenshot-jpeg-quality=100
 
-#Name format you want to save the pictures
+# Name format you want to save the pictures
 screenshot-template="%f-%wH.%wM.%wS.%wT-#%#00n"
+
+
+
+####################################################################
+####################################################################
+# EXPERIMENTAL:
+# Hardware decoding (if you want it)
+hwdec=auto-safe
+
+# Better subtitle rendering
+sub-font-size=45
+sub-border-size=2
+sub-shadow-offset=2
+
+# Smoother playback ( on 60+ hz screens test )
+video-sync=display-resample
+interpolation=yes
+
+# Better seeking behavior
+hr-seek=yes
+hr-seek-framedrop=no
+
+
+# Debanding for sources with compression artifacts
+deband=yes
+
+# Temporal dithering for smoother gradients
+dither-depth=auto
+temporal-dither=yes
