minor fixes and additions

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -172,7 +172,7 @@ misc {
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
-    kb_variant = alt-intl
+    kb_variant = altgr-intl
     kb_model =
     kb_options = caps:escape
     kb_rules =
@@ -187,9 +187,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#    workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -203,8 +203,8 @@ gestures {
 ### KEYBINDINGS ###
 ###################
 
-$mainMod = SUPER
-$altMod = ALT
+$mainMod = ALT
+$altMod = SUPER
 
 # Application shortcuts
 bind = $mainMod, RETURN, exec, $terminal
@@ -259,26 +259,15 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move window to workspace
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 10
-
-# Move window to workspace and follow
-bind = $mainMod CTRL SHIFT, 1, movetoworkspace, 1; workspace, 1
-bind = $mainMod CTRL SHIFT, 2, movetoworkspace, 2; workspace, 2
-bind = $mainMod CTRL SHIFT, 3, movetoworkspace, 3; workspace, 3
-bind = $mainMod CTRL SHIFT, 4, movetoworkspace, 4; workspace, 4
-bind = $mainMod CTRL SHIFT, 5, movetoworkspace, 5; workspace, 5
-
-# Special workspaces (scratchpad)
-bind = $mainMod, grave, togglespecialworkspace, magic
-bind = $mainMod SHIFT, grave, movetoworkspace, special:magic
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 10
 
 # Workspace navigation
 bind = $mainMod, TAB, workspace, previous
@@ -295,9 +284,9 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Screenshot shortcuts
-bind = , PRINT, exec, grim -g "$(slurp)" - | wl-copy
-bind = SHIFT, PRINT, exec, grim ~/Pictures/screenshot_$(date +%Y%m%d_%H%M%S).png
-bind = $mainMod, PRINT, exec, grim -g "$(slurp)" ~/Pictures/screenshot_$(date +%Y%m%d_%H%M%S).png
+bind = , INSERT, exec, grim -g "$(slurp)" - | wl-copy
+bind = SHIFT, INSERT, exec, grim ~/Pictures/Screenshot_$(date +%Y%m%d_%H%M%S).png
+bind = $mainMod, INSERT, exec, grim -g "$(slurp)" ~/Pictures/Screenshot_$(date +%Y%m%d_%H%M%S).png
 
 # Clipboard manager
 bind = $mainMod, C, exec, cliphist list | rofi -dmenu -theme gruvbox-dark | cliphist decode | wl-copy
@@ -310,8 +299,8 @@ bind = $mainMod SHIFT, X, exec, rofi -show p -modi p:rofi-power-menu
 # Audio controls
 bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # Brightness (if applicable)
 bindel = , XF86MonBrightnessUp, exec, brightnessctl s 10%+
