--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -22,6 +22,8 @@ $lock_screen = hyprlock
 # Essential services
 exec-once = waybar
 exec-once = dunst
+# Bluetooth Agent
+exec-once = blueman-applet
 # Background
 exec-once = hyprpaper
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -326,8 +328,8 @@ windowrulev2 = immediate, class:^(steam_app_).*
 windowrulev2 = immediate, class:^(lutris).*
 windowrulev2 = immediate, class:^(heroic).*
 windowrulev2 = fullscreen, class:^(steam_app_).*
-windowrulev2 = workspace 9, class:^(steam_app_).*
-windowrulev2 = workspace 9, class:^(lutris).*
+windowrulev2 = workspace 5, class:^(steam_app_).*
+windowrulev2 = workspace 5, class:^(lutris).*
 
 # Float specific applications
 windowrulev2 = float, class:^(nm-connection-editor)$
